fix: spacings and alignment
See #1

--- a/src/styles/components/community-wall.scss
+++ b/src/styles/components/community-wall.scss
@@ -1,5 +1,7 @@
 .c-community-wall {
   display: flex;
+  width: 844px;
+  margin: 0 auto;
   &__intro {
     padding: 40px;
     .text-box__headline {
