--- a/src/styles/components/payment-option.scss
+++ b/src/styles/components/payment-option.scss
@@ -1,6 +1,6 @@
 .payment-options {
   position: relative;
-  margin: 100px 0 40px 0;
+  margin: 180px 0 40px 0;
   &__headline {
     text-align: center;
     width: 577px;
@@ -15,7 +15,7 @@
   width: 276px;
   padding: 30px;
   border-radius: 8px;
-  box-shadow: 6px 6px 18px 5px rgba(0,0,0,0.07);
+  box-shadow: 6px 6px 18px 5px rgba(0, 0, 0, 0.07);
   margin: 23px;
   padding-bottom: 100px;
   position: relative;
