--- a/src/styles/components/position-overview.scss
+++ b/src/styles/components/position-overview.scss
@@ -1,4 +1,5 @@
 .position-overview {
+  margin-top: 150px;
   margin-bottom: 100px;
   &__headline {
     width: 424px;
