--- a/src/styles/components/testimonial.scss
+++ b/src/styles/components/testimonial.scss
@@ -67,7 +67,7 @@
 
 .testimonial-group {
   width: 820px;
-  margin: 0 auto;
+  margin: 0 auto 100px auto;
 
   &__headline,
   &__tagline {
